<resources>
    <string name="app_name">bikeshare</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="checkbox_text">Select this option</string>
    <string name="addBikeButton">Add funds</string>
    <string name="no_bikes">test</string>
    <string name="bikesHeader">Bikes</string>
    <string name="bikesCount">Displaying 0 results</string>
    <string name="emptyState">No bikes were found, add some and they will be displayed here. </string>
    <string name="addbikeHeader">Add bike</string>
    <string name="addBikeSubtitle">Fill out the form</string>
    <string name="uploadImageButton">Add image</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_end_ride_text">Are you sure you want to end the ride?</string>
    <string name="endRide">End ride</string>
    <string name="endRideTitle">Confirm end ride</string>
    <string name="confirm">Confirm</string>
    <string name="addBalanceTitle">Confirm new balance</string>
    <string name="rideHistoryHeader">Ride history</string>
    <string name="rideHistoryCoulbLabel">You have 0 rides</string>
    <string name="rideEmptyState">You haven\'t rented any bikes yet. Once you have rented a bike, it will displayed here.</string>
    <string name="startRideTitle">Confirm start ride</string>
    <string name="confirm_start_title">You are about to start renting a bike. Please confirm</string>
    <string name="startRide">Let\'s go!</string>
    <string name="location">Location</string>
    <string name="hourly_rate">Hourly rate</string>
    <string name="submit">Submit</string>
    <string name="bike_name">Bike name</string>
    <string name="bike_type">Bike type</string>
    <string name="pseudoCardNumber">**** **** **** 1337</string>
    <string name="pseudoCardExpDate">12/5/2020</string>
    <string name="pseudoCardSecretCode">012</string>
    <string name="vasa">Vasa</string>
    <string name="panda_express">Panda Express</string>
    <string name="coronacoin">CoronaCoin</string>
    <string name="mooster_card">Mooster Card</string>
    <string name="user">User</string>
    <string name="rides">Rides</string>
    <string name="account_balance">Account balance</string>
    <string name="register_bike">Register bike</string>
    <string name="view_available_bikes">View available bikes</string>
    <string name="ride_history">Ride history</string>
    <string name="add_balance">Add balance</string>
</resources>
