<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rideHistoryHeader"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/rideHistoryCountLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rideHistoryCoulbLabel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/rideEmptyState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rideEmptyState"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ride_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:scrollbars="vertical" />
    </LinearLayout>

</LinearLayout>